--- a/templates/products.html
+++ b/templates/products.html
@@ -7,17 +7,16 @@
 		<hr class="hr-5 opacity-100" style="background-color:red;">
 		<div class="w-100" v-for="(product, index) in products">
 			<a class="text-decoration-none text-black" :href="'#'+storePath+'/item-pedido/'+product.id">
-				<div  class="w-100 d-flex justify-content-between mt-0 margin-15">
+				<div  class="w-100 d-flex justify-content-between mt-0 ">
 					<div class="d-flex flex-wrap ">
 						<label class="font-size-2 m-0  w-100"><b>{{product.descricao}}</b></label>
 						<label class="font-size-3 m-0 text-muted w-100">{{product.descricao_longa}}</label>
 						<label class="font-size-3 m-0 align-self-end w-100">R$ {{parseFloat(product.preco).toFixed(2).replace('.',',')}}</label>
 					</div>
-					<div class="product-mini-image rounded-10 " v-bind:style="{ backgroundImage: 'url(' + product.image_url + ')' }"></div>
+					<div class="product-mini-image rounded-10 " v-bind:style="{ backgroundImage: (product.image_url==null)?'transparent':'url(' + product.image_url + ')' }"></div>
 				</div>
 			</a>
-			<hr class=" w-100 margin-15"/>	
+			<hr class=" w-100 margin-15"/>
 		</div>
-		
 	</div>
 </div>
