--- a/templates/update-user-password.html
+++ b/templates/update-user-password.html
@@ -15,17 +15,11 @@
 			<div class="w-100"><div id="logo" class="mx-auto"  v-bind:style="{ backgroundImage: 'url(' + store_logo + ')' }"></div></div>
 		</div>
 			<label id="slogam" class="w-100 text-center  font-size-1 ">
-				<p><b>{{store_text1}}</b></p>
-				<p><b>{{store_text2}}</b></p>
+				<p><b>Troca de senha</b></p>
 			</label>
 			<div class="w-100 margin-top-15" >
-				<input v-model="username" placeholder="Digite seu login" class=" text-center big-button-center bg-white rounded-10  font-size-2 hover-opacity-75 d-flex justify-content-center  align-items-center" @focusout="validUsername">
+				<input v-model="currentPassword" type="password" placeholder="Digite sua atual" class=" text-center big-button-center bg-white rounded-10  font-size-2 hover-opacity-75 d-flex justify-content-center  align-items-center" @focusout="disableFocusPassword" @focusin="enableFocusPassword" @keyup="validPassword" >
 			</div>
-			<p class="big-hint-center text-danger font-size-3" v-if="!isEmpty(errorUsername)">{{ errorUsername }}</p>
-			<div class="w-100 margin-top-15" >
-				<input v-model="email" type="email" placeholder="Digite seu e-mail" class=" text-center big-button-center bg-white rounded-10  font-size-2 hover-opacity-75 d-flex justify-content-center  align-items-center" @focusout="validEmail">
-			</div>
-			<p class="big-hint-center text-danger font-size-3" v-if="!isEmpty(errorEmail)">{{ errorEmail }}</p>
 			<div class="w-100 margin-top-15" >
 				<input v-model="password" type="password" placeholder="Digite sua senha" class=" text-center big-button-center bg-white rounded-10  font-size-2 hover-opacity-75 d-flex justify-content-center  align-items-center" @focusout="disableFocusPassword" @focusin="enableFocusPassword" @keyup="validPassword" >
 			</div>
@@ -55,20 +49,15 @@
 				</ul>
 			</div>
 			<div class="w-100 margin-top-15" >
-				<button class="big-button-center bg-primary text-white rounded-10  font-size-2 hover-opacity-75 d-flex justify-content-center  align-items-center" @click="createUser">
-					<label class="d-flex align-self-center">Criar conta</label>
+				<button class="big-button-center bg-primary text-white rounded-10  font-size-2 hover-opacity-75 d-flex justify-content-center  align-items-center" @click="changePassword">
+					<label class="d-flex align-self-center">Trocar senha</label>
 				</button>
 			</div>
 			
-			<div class="w-100 " >
-				<a :href="'#'+storePath+'/panel'" class="text-decoration-none"><button class="big-button-center bg-white border-0 font-size-2 text-center text-muted hover-opacity-75 d-flex justify-content-center  align-items-center">
-					<label class="">Manter como visitante </label>
-				</button></a>
-			</div>
 			<div class="w-100 margin-top-15" >
-				<a  :href="'#'+storePath+'/'" class="text-decoration-none"><button class="big-button-center bg-white border-0 font-size-2 text-center text-primary hover-opacity-75 d-flex justify-content-center  align-items-center">
+				<button class="big-button-center bg-white border-0 font-size-2 text-center text-primary hover-opacity-75 d-flex justify-content-center  align-items-center" @click="goBack()" >
 					<label ><svg class="button-mini-squared" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="currentColor"><path d="M256 504C119 504 8 393 8 256S119 8 256 8s248 111 248 248-111 248-248 248zM142.1 273l135.5 135.5c9.4 9.4 24.6 9.4 33.9 0l17-17c9.4-9.4 9.4-24.6 0-33.9L226.9 256l101.6-101.6c9.4-9.4 9.4-24.6 0-33.9l-17-17c-9.4-9.4-24.6-9.4-33.9 0L142.1 239c-9.4 9.4-9.4 24.6 0 34z"/></svg>Voltar</label>
-				</button></a>
+				</button>
 			</div>
 	</div>
 </div>
