--- a/templates/panel.html
+++ b/templates/panel.html
@@ -8,18 +8,20 @@
 				<button @click="findGroup" class="d-flex justify-content-center align-items-center button-mini-squared bg-primary m-0 border-primary text-white font-size-1  hover-opacity-75  border-0"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="currentColor"><path d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"/></svg></button>
 			</div> 
 			<button @click="goOrder" class="button-mini-squared font-size-1 bg-primary d-flex rounded-10 border-0 text-white hover-opacity-75 d-flex justify-content-center align-items-center border-0"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" fill="currentColor"><path d="M96 0C107.5 0 117.4 8.19 119.6 19.51L121.1 32H541.8C562.1 32 578.3 52.25 572.6 72.66L518.6 264.7C514.7 278.5 502.1 288 487.8 288H170.7L179.9 336H488C501.3 336 512 346.7 512 360C512 373.3 501.3 384 488 384H159.1C148.5 384 138.6 375.8 136.4 364.5L76.14 48H24C10.75 48 0 37.25 0 24C0 10.75 10.75 0 24 0H96zM128 464C128 437.5 149.5 416 176 416C202.5 416 224 437.5 224 464C224 490.5 202.5 512 176 512C149.5 512 128 490.5 128 464zM512 464C512 490.5 490.5 512 464 512C437.5 512 416 490.5 416 464C416 437.5 437.5 416 464 416C490.5 416 512 437.5 512 464z"/></svg></button>
-			<button @click="toggleMenu" class="button-mini-squared font-size-1 bg-dark d-flex rounded-10 border-0 text-white hover-opacity-75 d-flex justify-content-center align-items-center border-0"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" fill="currentColor"><path d="M224 256c70.7 0 128-57.31 128-128s-57.3-128-128-128C153.3 0 96 57.31 96 128S153.3 256 224 256zM274.7 304H173.3C77.61 304 0 381.6 0 477.3c0 19.14 15.52 34.67 34.66 34.67h378.7C432.5 512 448 496.5 448 477.3C448 381.6 370.4 304 274.7 304z"/></svg></button>
+			<button @click="toggleMenu" class="button-mini-squared font-size-1 bg-dark d-flex rounded-10 border-0 text-white hover-opacity-75 d-flex justify-content-center align-items-center border-0 padding-10">
+				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" fill="currentColor"><path d="M224 256c70.7 0 128-57.31 128-128s-57.3-128-128-128C153.3 0 96 57.31 96 128S153.3 256 224 256zM274.7 304H173.3C77.61 304 0 381.6 0 477.3c0 19.14 15.52 34.67 34.66 34.67h378.7C432.5 512 448 496.5 448 477.3C448 381.6 370.4 304 274.7 304z"/></svg>
+			</button>
 		</div>
 
 		<div class="d-flex justify-content-between   margin-top-20 w-100">
     		<div id="menu-user" class="d-none position-absolute rounded-10  margin-top-20 padding-20 w-100 bg-dark d-block  font-size-1" style="right:0px;z-index:3000;">
-                <a class="text-decoration-none text-white ">{{(isLoged())?getUserName():"VISITANTE"}}</a><br>
+                <a class="text-decoration-none text-white ">{{(isLoged())?"BEM VINDO "+getUserName():"VISITANTE"}}</a><br>
                 <hr class="w-100 bg-white">
-                <a v-if="isLoged()" class="text-decoration-none text-white hover-opacity-75">EDITAR PERFIL</a>
+                <a v-if="isLoged()" :href="'#'+storePath+'/your-profile'" class="text-decoration-none text-white hover-opacity-75">SEU PERFIL</a>
                 <a v-if="!isLoged()" :href="'#'+storePath+'/'"  class="text-decoration-none text-white hover-opacity-75">ENTRAR</a>
 				<br>
                 <hr class="w-100 bg-white">
-				<a v-if="isLoged()" class="text-decoration-none text-white hover-opacity-75">TROCAR SENHA</a>
+				<a v-if="isLoged()" :href="'#'+storePath+'/update-user-password-store'" class="text-decoration-none text-white hover-opacity-75">TROCAR SENHA</a>
                 <a v-if="!isLoged()" :href="'#'+storePath+'/create-user'"  class="text-decoration-none text-white hover-opacity-75">CRIAR CONTA</a>
 				<br>
                 <hr class="w-100 bg-white">
